--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "build": "gulp",
     "start": "pm2 start config/pm2.prod.config.json",
-    "dev": "pm2 start config/pm2.dev.config.json && pm2 logs",
+    "dev": "pm2 start config/pm2.dev.config.json && pm2 logs --raw",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@types/koa": "^2.0.46",
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-router": "^7.0.30",
+    "@types/koa-static": "^4.0.0",
     "@types/mongoose": "^5.2.0",
+    "@types/pino": "^4.16.0",
     "@types/run-sequence": "0.0.30",
     "gulp": "^3.9.1",
     "gulp-typescript": "^5.0.0-alpha.3",
@@ -26,8 +28,12 @@
     "koa": "^2.5.2",
     "koa-bodyparser": "^4.2.1",
     "koa-decorator-ts": "^1.3.8",
+    "koa-static": "^5.0.0",
     "log4js": "^3.0.0",
     "mongodb": "^3.1.1",
-    "mongoose": "^5.2.4"
+    "mongoose": "^5.2.4",
+    "pino": "^4.17.5",
+    "pino-pretty": "^1.0.1",
+    "pino-tee": "^0.2.2"
   }
 }
