Improve logger style

--- a/config/config.prod.json
+++ b/config/config.prod.json
@@ -3,5 +3,9 @@
   "secert": "test",
   "db": {
     "url": ""
+  },
+  "logs": {
+    "appLog": "./logs/app.logs",
+    "errLog": "./logs/app.logs"
   }
 }
