--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "gulp build",
     "dev": "gulp",
+    "start-dev": "pm2 start config/pm2.dev.config.json",
     "start": "pm2 start config/pm2.prod.config.json",
     "debug": "node dist/src/app.js"
   },
@@ -27,10 +28,11 @@
     "nodemon": "^1.18.3",
     "run-sequence": "^2.2.1",
     "ts-node": "^7.0.0",
-    "typescript": "^2.9.2"
+    "typescript": "^3.0.1"
   },
   "dependencies": {
     "@types/log4js": "^2.3.5",
+    "gulp-ssh-deploy": "0.0.3",
     "koa": "^2.5.2",
     "koa-bodyparser": "^4.2.1",
     "koa-decorator-ts": "^1.3.8",
